--- a/TO-DO WebApp/index.html
+++ b/TO-DO WebApp/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>To-Do Web App</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+
+        <div id="app">
+            <h2>To-Do List</h2>
+            <input type="text" id="taskInput" placeholder="Add a new task...">
+            <button onclick="addTask()">Add Task</button>
+
+            <h3>Pending Tasks</h3>
+            <ul id="pendingTasks"></ul>
+
+            <h3>Completed Tasks</h3>
+            <ul id="completedTasks"></ul>
+        </div>
+
+        <script src="script.js"></script>
+
+    </body>
+
+</html>
